--- a/am/media.css
+++ b/am/media.css
@@ -325,7 +325,7 @@ transition: opacity 0.1  1.5s ease;
 	box-shadow: -3px 2px 4px 3px rgba(0, 0, 0, 0.579);
 	height:calc(10vw - 1%);
 	width:10vw;
-	background-image: url(images/head.jpg);
+	background-image: url(images/head.webp);
 	transform: scale(1.7) translateY(-4vh) translateX(3vw);
 	border-radius: 50%;
 	position:absolute;
@@ -415,7 +415,7 @@ transition: opacity 0.1  1.5s ease;
 	box-shadow: -3px 2px 4px 3px rgba(0, 0, 0, 0.579);
 	height:calc(10vw - 1%);
 	width:10vw;
-	background-image: url(images/head.JPG);
+	background-image: url(images/head.webp);
 	transform: scale(1.7) translateY(-4vh) translateX(3vw);
 	border-radius: 50%;
 	position:absolute;
@@ -505,7 +505,7 @@ transition: opacity 0.1  1.5s ease;
 	box-shadow: -3px 2px 4px 3px rgba(0, 0, 0, 0.579);
 	height:calc(10vw - 1%);
 	width:10vw;
-	background-image: url(images/head.JPG);
+	background-image: url(images/head.webp);
 	transform: scale(1.7) translateY(-4vh) translateX(3vw);
 	border-radius: 50%;
 	position:absolute;
@@ -638,7 +638,7 @@ transition: opacity 0.1  1.5s ease;
 	margin-left:4vw !important;
 	height:calc(14vw - 1%)!important;
 	width:14vw!important;
-	background-image: url(images/am-epi.JPG);
+	background-image: url(images/am-epi.webp);
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
   }
@@ -663,7 +663,7 @@ transition: opacity 0.1  1.5s ease;
 	box-shadow: -3px 2px 4px 3px rgba(0, 0, 0, 0.579);
 	height:calc(14vw - 1%);
 	width:14vw;
-	background-image: url(images/am-crib.JPG);
+	background-image: url(images/am-crib.webp);
 	transform: scale(4) translateY(6vh) translateX(3vw);
 	border-radius: 50%;
 	position:absolute;
@@ -685,7 +685,7 @@ transition: opacity 0.1  1.5s ease;
 	position: relative;
 	transition: opacity 0.3s;
 	width: 350px;
-	background-image: url(images/am-palp2.svg);
+	background-image: url(images/am-palp.webp);
 	background-size:100% 100% !important;
 
 	background-repeat: no-repeat;
@@ -697,7 +697,7 @@ transition: opacity 0.1  1.5s ease;
 	box-shadow: -3px 2px 4px 3px rgba(0, 0, 0, 0.579);
 	height:calc(10vw - 4%);
 	width:10vw;
-	background-image: url(images/am-palp2.svg);
+	background-image: url(images/am-palp.webp);
 	background-size:110% 110% !important;
 	background-position-x:-0.6vw ;
 	background-position-y:-0.5vh ;
@@ -2309,13 +2309,12 @@ margin-left:20vw !important;
 	display: block;
 	position: absolute;
 	top: 80vh;
-	right: 35px;
+	right: 15px;
 	width: 32px;
 	height: 32px;
 	line-height: 32px;
 	text-align: center;
 	text-decoration: none;
-	z-index:200;
 	-webkit-transition: all 0.1s ease-in-out;
 			transition: all 0.1s ease-in-out;
   }
