--- a/am/media.css
+++ b/am/media.css
@@ -208,7 +208,7 @@ transition: opacity 0.1  1.5s ease;
 	-webkit-overflow-scrolling: scroll;
   
 	color:white;
-	margin-left:-10% !important;font-family: 'Roboto Mono', monospace;
+	margin-left:-10% !important;  font-family: 'RobotoMono-Thin';
 	margin-top:20px !important;
   }
 
